# disaster_tweets

./: LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
config/: train.yml  train_bert.yml  train_bert_head.yml  train_distilbert.yml  train_distilbert_aug.yml  train_head.yml
src/disaster_tweets/: __init__.py  data.py  model.py  training.py
src/disaster_tweets/notebooks/: data_exploration.ipynb
src/disaster_tweets/scripts/: __init__.py  train.py
src/notebooks/: data_exploration.ipynb
